syntax = "proto3";

package kademlia;
import "google/protobuf/timestamp.proto";

service KademliaService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc AddNode(NodeGrpc) returns (AddNodeResponse);
  rpc RemoveNode(NodeGrpc) returns (RemoveNodeResponse);
  rpc FindClosestNode(FindRequest) returns (NodeGrpc);
  rpc GetRoutingTable(Empty) returns (RoutingTableResponse);
  rpc GetSelfNode(Empty) returns (NodeGrpc);
  rpc BroadcastAuction(AuctionGrpc) returns (AuctionResponse);
  rpc FindNode(NodeGrpc) returns (NodeGrpc);
  rpc PrintRoutingTable(Empty) returns (PrintRoutingTableResponse);
  rpc GetAuctions(Empty) returns (GetAuctionsResponse);
  rpc SendBid(BidGrpc) returns (SendBidResponse);
  rpc BroadcastBlock(BlockGrpc) returns (BlockAck);
  rpc GetLastBlockHashFromAuction(BidGrpc) returns (BlockHash);
}

message NodeGrpc {
  string id = 1;
  string ip = 2;
  int32 port = 3;
}

message PingRequest {
  string id = 1;
}

message PingResponse {
  string message = 1;
}

message AddNodeResponse {
  string message = 1;
}

message RemoveNodeResponse {
  string message = 1;
}

message FindRequest {
  string targetId = 1;
}

message Empty {}

message RoutingTableResponse {
  repeated NodeGrpc nodes = 1;
}


message AuctionGrpc {
  int32 id = 1;
  repeated BidGrpc bids = 2;
  repeated ProductGrpc products = 3;
  int32 hoursToCloseAuction = 4;
  string senderHash = 5;
  google.protobuf.Timestamp creationTimeStamp = 6;
  repeated string participants= 7;
}

message BidGrpc {
  int32 id = 1;
  int32 productId = 2;
  float bidValue = 3;
  string sender = 4;
  int32 auctionId = 5;
}

message ProductGrpc {
  int32 id = 1;
  string name = 2;
  float initialPrice = 3;
  float finalPrice = 4;
}

message AuctionResponse {
  string message = 1;
}

message PrintRoutingTableResponse {
  string message = 1;
}


message GetAuctionsResponse {
  repeated AuctionGrpc auctions = 1;
}

message SendBidResponse{
  string message = 1;
}


message BlockGrpc {
  int32 index = 1;
  int64 timestamp = 2;
  BidGrpc bid = 3;
  string previousHash = 4;
  string hash = 5;
}

message BlockAck {
  bool success = 1;
  string message = 2;
}

message BlockHash{
  string blockHash = 1;
}

